tests/baselines/reference/exportNonInitializedVariablesAMD.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
exportNonInitializedVariablesAMD.ts(1,4): error TS1123: Variable declaration list cannot be empty.
exportNonInitializedVariablesAMD.ts(2,1): error TS1214: Identifier expected. 'let' is a reserved word in strict mode. Modules are automatically in strict mode.
exportNonInitializedVariablesAMD.ts(2,1): error TS2304: Cannot find name 'let'.
exportNonInitializedVariablesAMD.ts(3,6): error TS1123: Variable declaration list cannot be empty.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== exportNonInitializedVariablesAMD.ts (4 errors) ====
    var;
       
!!! error TS1123: Variable declaration list cannot be empty.
    let;
    ~~~
!!! error TS1214: Identifier expected. 'let' is a reserved word in strict mode. Modules are automatically in strict mode.
    ~~~
!!! error TS2304: Cannot find name 'let'.
    const;
         
!!! error TS1123: Variable declaration list cannot be empty.
    
    export var a;
    export let b;
    export var c: string;
    export let d: number;
    class A {}
    export var e: A;
    export let f: A;
    
    namespace B {
        export let a = 1, b, c = 2;
        export let x, y, z;
    }
    
    namespace C {
        export var a = 1, b, c = 2;
        export var x, y, z;
    }
    
    // Shouldn't be filtered
    export var a1 = 1;
    export let b1 = 1;
    export var c1: string = 'a';
    export let d1: number = 1;
    class D {}
    export var e1 = new D;
    export let f1 = new D;
    export var g1: D = new D;
    export let h1: D = new D;
    